[LayoutNG] Self-painting border-collapsed table cells need to clip.

In the collapsed table borders model, all borders (from the table
itself, table sections, table columns, table rows and table cells) are
painted in the background-and-borders phase of the table. We need
special code to prevent the background of a self-painting-layer
table-cell from overlapping with the borders that have already been
painted. Similar code exists for legacy in TableCellPainter.

Bug: 869878
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_layout_ng;luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I190dd6a152e751f6b30409104fb466ca46bb9024
Reviewed-on: https://chromium-review.googlesource.com/c/1289890
Commit-Queue: David Grogan <dgrogan@chromium.org>
Reviewed-by: Emil A Eklund <eae@chromium.org>
Cr-Commit-Position: refs/heads/master@{#600959}
Former-commit-id: 9138bc279c1213164250d8532675b495d8fc0bba